--- a/templates/contact.ejs
+++ b/templates/contact.ejs
@@ -35,7 +35,7 @@
                     <textarea class="text input" name="body" id="" rows="10" required
                         placeholder="Write your query here!"></textarea>
 
-                    <button class="btn button">Submit</button>
+                    <button class="btn button">Contact</button>
                 </form>
             </div>
 
