--- a/static/css/login.css
+++ b/static/css/login.css
@@ -31,7 +31,8 @@
     width: 70%;
     padding: 15px;
     margin: 10px auto;
-    border-radius: 10px;
+    border: unset;
+    border-bottom: 2px solid black;
     text-align: center;
     font-size: 16px;
 }
