--- a/static/css/showblog.css
+++ b/static/css/showblog.css
@@ -1,24 +1,39 @@
 .container {
     text-align: left;
     margin: 50px auto;
+    min-height: 70vh;
+}
+.two p{
+    font-size: 20px ;
+}
+.two p strong{
+    font-size: 30px;
 }
 
-.h22,
-.container h5 {
-    border: 2px solid black;
+.h22{
+    width: 30%;
+    height: 5%;
     border-radius: 10px;
+    border-left: 2px solid black;
+    border-bottom: 2px solid black;
     margin-top: 20px !important;
     padding: 20px;
     display: flex;
+    justify-content: center;
+    align-items: flex-start;
     flex-direction: column;
     word-wrap: break-word;
+    position: sticky;
+    top: 50px;
+    box-shadow: 23px -22px black;
 }
 
 .text1 {
     width: 70%;
-    padding: 30px;
-    border: 1px solid black;
-    border-radius: 10px;
+    padding: 10px;
+    border: unset;
+    border-bottom: 2px solid black;
+    border-left: 2px solid black;
 }
 
 hr {
@@ -28,26 +43,26 @@ hr {
 }
 
 .input {
-    border: 1px solid black;
-    border-radius: 10px;
+    border: unset;
     width: 70%;
     padding: 10px 30px;
-    margin: 5px 0px;
+    margin: 20px 0px;
+    border-bottom: 2px solid black;
+    border-left: 2px solid black;
 }
 
 .section {
     width: 100%;
     margin: 30px auto;
     padding: 10px;
-    border: 2px solid black;
+    border-top: 2px solid black;
     min-height: 250px;
-    border-radius: 10px;
 }
 
 .form {
     display: flex;
     width: 100%;
-    margin: 20px auto;
+    margin: 20px auto 0px;
     padding: 10px;
     flex-direction: column;
 }
@@ -69,24 +84,117 @@ hr {
     width: 80%;
     min-height: 100px;
     height: auto;
-    padding: 10px 30px;
+    padding: 7px 20px;
     margin: 10px 0px;
 }
 
 .container .btn {
-    width: 20%;
+    width: 30%;
     padding: 10px !important;
     border-radius: 10px;
 }
 
-.btn:hover {
+
+.conti{
+    display: flex;
+    width: 60%;
+    margin-left: 3rem;
+}
+
+/* .container .btn:hover {
+    color: black !important;
+    border: 2px solid #4caf50 !important;
+    background-color: transparent !important;
+} */
+
+/* .btn:hover {
     color: blue !important;
     border: 2px solid black;
-}
+} */
 
 .avatar {
     vertical-align: middle;
     width: 50px;
     height: 50px;
     border-radius: 50%;
+}
+
+.image {
+    width: 100%;
+    height: 400px;
+    margin: 10px 0px 30px 0px;
+}
+
+img {
+    object-fit: cover;
+    object-position: center, center;
+    width: 100%;
+    height: 100%;
+}
+
+.btn-danger {
+    background-color: red !important;
+}
+
+.btn-danger:hover {
+    background-color: unset !important;
+    border: 2px solid red !important;
+    color: black !;
+}
+
+.conti {
+    display: flex;
+}
+
+.two {
+    margin: 10px auto;
+    width: 50%;
+}
+
+.title {
+    background: url('https://images.unsplash.com/photo-1615715757401-f30e7b27b912?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxjb2xsZWN0aW9uLXBhZ2V8MXwxMTI1NDUzfHxlbnwwfHx8fA%3D%3D&w=1000&q=80') no-repeat center center/cover;
+    background-attachment: fixed;
+    width: 100%;
+    padding: 12rem;
+    text-align: center;
+}
+
+.title h1 {
+    font-size: 5rem;
+}
+
+.btn2 {
+    background-color: grey !important;
+    color: white !important;
+}
+
+.btn2:hover {
+    background-color: unset !important;
+    border: 2px solid grey !important;
+    color: black !important;
+}
+
+.btn3:hover {
+    background-color: unset !important;
+    border: 2px solid red !important;
+    color: black !important;
+}
+
+.btn3 {
+    background-color: red !important;
+    color: white !important;
+}
+
+.btn1:hover {
+    background-color: unset !important;
+    border: 2px solid #9ccc65 !important;
+    color: black !important;
+}
+
+.btn1 {
+    background-color: #9ccc65 !important;
+    color: white !important;
+    width: 20%;
+    padding: 10px !important;
+    border-radius: 10px;
 }
